concord_macros/tests/trybuild/fail/codegen_contract/contract_argument_type.rs
const _: () = concord_core::__private::assert_generated_contract(());

fn main() {}
